Fixes panier modal not showing in API mode

--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -165,6 +165,9 @@
   & > div:only-child {
     position : absolute;
   }
+  #panierModal {
+    display: block;
+  }
 }
 
 .modal-open {
